# outbox

./: CMakeLists.txt  README.md  main.cpp  sqlitestringmessageoutbox.cpp  sqlitestringmessageoutbox.hpp
db/sqlite/: all.hpp  database.cpp  database.hpp  query.cpp  query.hpp
patterns/: outbox.hpp
